upload all files

--- a/products/pretreatment/index.html
+++ b/products/pretreatment/index.html
@@ -353,8 +353,21 @@
           <div class="body">
             <div class="badges"><span class="badge">Alkaline Cleaner</span><span class="badge">Pretreatment</span></div>
             <h3 data-i18n-key="alk_title">ผงด่างล้างไขมัน (Alkaline Degreaser)</h3>
-            <p data-i18n-key="alk_desc">จัดการคราบน้ำมัน แว๊กซ์ และจาระบีจากการกลึง/ปั๊ม ให้ผิวสะอาดโดยไม่ทำลายเนื้อโลหะ มีคุณสมบัติล้างคราบน้ำมันและสนิมแดงๆ รวมไปถึงรอยสะเก็ด รอยถลอกจากผิวงานอย่างมีประสิทธิภาพ มีทั้งแบบต้มและใช้ไฟฟ้า</p>
+            <p data-i18n-key="alk_desc">จัดการคราบน้ำมัน แว๊กซ์ และจาระบีจากการกลึง/ปั๊ม ให้ผิวสะอาดโดยไม่ทำลายเนื้อโลหะ มีคุณสมบัติล้างคราบน้ำมันและสนิมแดงๆ รวมไปถึงรอยสะเก็ด รอยถลอกจากผิวงานอย่างมีประสิทธิภาพ ใช้ได้ทั้งแบบต้มและกลิ้ง</p>
             <a class="more" href="soakclean.html" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+          </div>
+        </article>
+
+                <!-- Electro Degreaser -->
+        <article id="alkaline" class="card lift reveal">
+          <picture>
+            <img src="https://i.imgur.com/2hf2uIE.jpeg" alt="Alkaline electro degreaser for oils/wax/grease">
+          </picture>
+          <div class="body">
+            <div class="badges"><span class="badge">Alkaline Electro Degreaser</span><span class="badge">Pretreatment</span></div>
+            <h3 data-i18n-key="alk_title">E-60 ยาแยกไฟฟ้าแบบด่างชนิดผง (Alkaline Electro Degreaser)</h3>
+            <p data-i18n-key="alk_desc">ผงด่างปราศจากสารลดแรงตึงผิว มีซิลิเกต ฟอสเฟต และสารกำจัดสนิม ใช้ล้างคราบน้ำมันด้วยไฟฟ้า แนะนำใช้คู่ Soak clean B1 พร้อมวิธีใช้และเงื่อนไขการเดินงาน</p>
+            <a class="more" href="electrodegreaser.html" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
 
@@ -551,7 +564,7 @@
         acid_desc:"เหมาะกับงานที่มีสนิม/ออกไซด์หรือเกลือค้าง พร้อมคราบน้ำมันเล็กน้อย คุมพารามิเตอร์ให้เหมาะเพื่อหลีกเลี่ยงการกัดผิวเกินจำเป็น ได้ผิวสะอาดพร้อมชุบ",
 
         alk_title:"ผงด่างล้างไขมัน (Alkaline Degreaser)",
-        alk_desc:"จัดการคราบน้ำมัน แว๊กซ์ และจาระบีจากการกลึง/ปั๊ม ให้ผิวสะอาดโดยไม่ทำลายเนื้อโลหะ สามารถนำไปกลิ้งขัดสะอาด บนงานเหล็กและโลหะที่ไม่ใช่เหล็ก มีทั้งแบบต้มและใช้ไฟฟ้า",
+        alk_desc:"จัดการคราบน้ำมัน แว๊กซ์ และจาระบีจากการกลึง/ปั๊ม ให้ผิวสะอาดโดยไม่ทำลายเนื้อโลหะ สามารถนำไปกลิ้งขัดสะอาด บนงานเหล็กและโลหะที่ไม่ใช่เหล็ก ใช้ได้ทั้งแบบต้มและกลิ้ง",
 
         ultra_title:"ทำความสะอาดอัลตร้าโซนิค (Ultrasonic)",
         ultra_desc:"ระบบเขย่าขัดและกลิ้งล้าง กำจัดคราบในโพรง/รูด้วยคลื่นความถี่สูง เพิ่มประสิทธิภาพการทำความสะอาดและลดเวลา เหมาะกับชิ้นส่วนรูปทรงซับซ้อน",
@@ -584,7 +597,7 @@
         acid_desc:"Best for parts with rust/oxides or salt residues along with light oils. Proper control prevents over-etching and leaves a clean, plating-ready surface.",
 
         alk_title:"Alkaline Degreaser",
-        alk_desc:"Targets oils, wax, and grease from machining/stamping. Cleans without attacking the base metal when parameters are controlled.",
+        alk_desc:"Targets oils, wax, and grease from machining/stamping. Cleans without attacking the base metal when parameters are controlled. It can be used for both boiling and rolling",
 
         ultra_title:"Ultrasonic Cleaner",
         ultra_desc:"Dislodges soils trapped in cavities/holes with high-frequency waves; boosts efficiency and reduces dwell time for complex parts.",
