upload all files

--- a/products/pretreatment/index.html
+++ b/products/pretreatment/index.html
@@ -361,12 +361,12 @@
                 <!-- Electro Degreaser -->
         <article id="alkaline" class="card lift reveal">
           <picture>
-            <img src="https://i.imgur.com/2hf2uIE.jpeg" alt="Alkaline electro degreaser for oils/wax/grease">
+            <img src="https://img5.pic.in.th/file/secure-sv1/thumbnail26218b1741271133.jpg" alt="Alkaline electro degreaser for oils/wax/grease">
           </picture>
           <div class="body">
             <div class="badges"><span class="badge">Alkaline Electro Degreaser</span><span class="badge">Pretreatment</span></div>
-            <h3 data-i18n-key="alk_title">E-60 ยาแยกไฟฟ้าแบบด่างชนิดผง (Alkaline Electro Degreaser)</h3>
-            <p data-i18n-key="alk_desc">ผงด่างปราศจากสารลดแรงตึงผิว มีซิลิเกต ฟอสเฟต และสารกำจัดสนิม ใช้ล้างคราบน้ำมันด้วยไฟฟ้า แนะนำใช้คู่ Soak clean B1 พร้อมวิธีใช้และเงื่อนไขการเดินงาน</p>
+            <h3 data-i18n-key="alk_title1">E-60 ยาแยกไฟฟ้าแบบด่างชนิดผง (Alkaline Electro Degreaser)</h3>
+            <p data-i18n-key="alk_desc1">ผงด่างปราศจากสารลดแรงตึงผิว มีซิลิเกต ฟอสเฟต และสารกำจัดสนิม ใช้ล้างคราบน้ำมันด้วยไฟฟ้า แนะนำใช้คู่ Soak clean B1 พร้อมวิธีใช้และเงื่อนไขการเดินงาน</p>
             <a class="more" href="electrodegreaser.html" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
@@ -564,7 +564,9 @@
         acid_desc:"เหมาะกับงานที่มีสนิม/ออกไซด์หรือเกลือค้าง พร้อมคราบน้ำมันเล็กน้อย คุมพารามิเตอร์ให้เหมาะเพื่อหลีกเลี่ยงการกัดผิวเกินจำเป็น ได้ผิวสะอาดพร้อมชุบ",
 
         alk_title:"ผงด่างล้างไขมัน (Alkaline Degreaser)",
+        alk_title1:"ผงแยกไฟฟ้าแบบด่าง (Alkaline Electro)",
         alk_desc:"จัดการคราบน้ำมัน แว๊กซ์ และจาระบีจากการกลึง/ปั๊ม ให้ผิวสะอาดโดยไม่ทำลายเนื้อโลหะ สามารถนำไปกลิ้งขัดสะอาด บนงานเหล็กและโลหะที่ไม่ใช่เหล็ก ใช้ได้ทั้งแบบต้มและกลิ้ง",
+        alk_desc1:"ผงด่างปราศจากสารลดแรงตึงผิว มีซิลิเกต ฟอสเฟต และสารกำจัดสนิม ใช้ล้างคราบน้ำมันด้วยไฟฟ้า แนะนำใช้คู่ Soak clean B1 พร้อมวิธีใช้และเงื่อนไขการเดินงาน",
 
         ultra_title:"ทำความสะอาดอัลตร้าโซนิค (Ultrasonic)",
         ultra_desc:"ระบบเขย่าขัดและกลิ้งล้าง กำจัดคราบในโพรง/รูด้วยคลื่นความถี่สูง เพิ่มประสิทธิภาพการทำความสะอาดและลดเวลา เหมาะกับชิ้นส่วนรูปทรงซับซ้อน",
@@ -597,7 +599,10 @@
         acid_desc:"Best for parts with rust/oxides or salt residues along with light oils. Proper control prevents over-etching and leaves a clean, plating-ready surface.",
 
         alk_title:"Alkaline Degreaser",
+        alk_title1:"Electro Degreaser",
         alk_desc:"Targets oils, wax, and grease from machining/stamping. Cleans without attacking the base metal when parameters are controlled. It can be used for both boiling and rolling",
+        alk_desc1:"Electro-cleaning degreaser: silicates, phosphates, deruster. Usage ranges and analysis method included.",
+
 
         ultra_title:"Ultrasonic Cleaner",
         ultra_desc:"Dislodges soils trapped in cavities/holes with high-frequency waves; boosts efficiency and reduces dwell time for complex parts.",
