--- a/products/pretreatment/soakclean.html
+++ b/products/pretreatment/soakclean.html
@@ -48,6 +48,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="preload" as="image" href="https://i.imgur.com/2hf2uIE.jpeg"/>
 
+  <!-- Preload hero & feature images -->
+  <link rel="preload" as="image" href="https://i.imgur.com/2hf2uIE.jpeg"/>
+
+  <!-- Feature thumbnails (circle) -->
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/thumbnail26218b1741271133.jpg"/> <!-- Electro-cleaning tank -->
+  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1505490096310-204ef067fe8b?q=80&w=600&auto=format&fit=crop"/> <!-- Smooth surface -->
+  <link rel="preload" as="image" href="https://img2.pic.in.th/pic/image4bb21a99d474156ba.jpeg"/> <!-- Lab / analysis -->
+  <link rel="preload" as="image" href="https://i.imgur.com/MLtal0F.jpeg"/> <!-- Rust removal -->
+  <link rel="preload" as="image" href="https://img2.pic.in.th/pic/ultrasonic.png"/> <!-- Energy/current -->
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/image106d45e0e719810623.jpeg"/> <!-- Maintenance -->
+
   <style>
     :root{
       --brand:#2c5e4e; --brand-2:#387b5b; --ink:#0f172a; --muted:#5b6675; --bg:#f4f6f5;
