--- a/products/pretreatment/electrodegreaser.html
+++ b/products/pretreatment/electrodegreaser.html
@@ -23,7 +23,7 @@
   <meta property="og:title" id="ogTitle" content="E-60 — Electro Degreaser (Alkaline, Surfactant-Free)">
   <meta property="og:description" id="ogDesc" content="ผงด่างปราศจากสารลดแรงตึงผิว มีซิลิเกต ฟอสเฟต และสารกำจัดสนิม ใช้ล้างคราบน้ำมันด้วยไฟฟ้า แนะนำใช้คู่ Soak clean B1 พร้อมวิธีใช้และเงื่อนไขการเดินงาน">
   <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/electrocleaning/e60/index.html">
-  <meta property="og:image" content="https://images.unsplash.com/photo-1581091215367-59ab6b4e3c3d?q=80&w=1600&auto=format&fit=crop">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail26218b1741271133.jpg">
   <meta property="og:image:alt" content="Electro-cleaning alkaline bath removing oils from metal parts">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" id="twTitle" content="E-60 — Electro Degreaser (Alkaline, Surfactant-Free)">
@@ -36,22 +36,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
 
   <!-- Preload hero & feature images -->
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1581091215367-59ab6b4e3c3d?q=80&w=1600&auto=format&fit=crop"/>
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/thumbnail26218b1741271133.jpg"/>
 
   <!-- Feature thumbnails (circle) -->
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1505483531331-374d1512b4a2?q=80&w=600&auto=format&fit=crop"/> <!-- Electro-cleaning tank -->
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/thumbnail26218b1741271133.jpg"/> <!-- Electro-cleaning tank -->
   <link rel="preload" as="image" href="https://images.unsplash.com/photo-1505490096310-204ef067fe8b?q=80&w=600&auto=format&fit=crop"/> <!-- Smooth surface -->
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?q=80&w=600&auto=format&fit=crop"/> <!-- Lab / analysis -->
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1520248730172-47d1aa775b9e?q=80&w=600&auto=format&fit=crop"/> <!-- Rust removal -->
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?q=80&w=600&auto=format&fit=crop"/> <!-- Energy/current -->
-  <link rel="preload" as="image" href="https://images.unsplash.com/photo-1532634896-26909d0d4b6a?q=80&w=600&auto=format&fit=crop"/> <!-- Maintenance -->
+  <link rel="preload" as="image" href="https://img2.pic.in.th/pic/image4bb21a99d474156ba.jpeg"/> <!-- Lab / analysis -->
+  <link rel="preload" as="image" href="https://i.imgur.com/MLtal0F.jpeg"/> <!-- Rust removal -->
+  <link rel="preload" as="image" href="https://img2.pic.in.th/pic/ultrasonic.png"/> <!-- Energy/current -->
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/image106d45e0e719810623.jpeg"/> <!-- Maintenance -->
 
   <style>
     :root{
       --brand:#2c5e4e; --brand-2:#387b5b; --ink:#0f172a; --muted:#5b6675; --bg:#f4f6f5;
       --radius:14px; --shadow-1:0 8px 26px rgba(2,8,20,.06); --shadow-2:0 16px 40px rgba(2,8,20,.14);
       --logo-url:url('https://img2.pic.in.th/pic/Baume.jpg');
-      --hero-url:url('https://images.unsplash.com/photo-1581091215367-59ab6b4e3c3d?q=80&w=1600&auto=format&fit=crop'); /* electro-cleaning hero */
+      --hero-url:url('https://img5.pic.in.th/file/secure-sv1/thumbnail26218b1741271133.jpg'); /* electro-cleaning hero */
       --header-h:64px; --container:1200px;
     }
     *{box-sizing:border-box}
@@ -243,7 +243,7 @@
       "category":"Electroplating pretreatment chemicals",
       "description":"Alkaline electro-degreaser powder free of surfactants with silicates, phosphates, and deruster; removes stubborn oils with DC power. Recommended with Soak clean B1. Includes usage ranges, maintenance, and analysis method.",
       "url":"https://www.baumechemical.com/products/pretreatment/electrocleaning/e60/",
-      "image":"https://images.unsplash.com/photo-1581091215367-59ab6b4e3c3d?q=80&w=1600&auto=format&fit=crop"
+      "image":"https://img5.pic.in.th/file/secure-sv1/thumbnail26218b1741271133.jpg"
     },
     {
       "@type":"BreadcrumbList",
