upload all files

--- a/products/pretreatment/electrodegreaser.html
+++ b/products/pretreatment/electrodegreaser.html
@@ -8,7 +8,7 @@
   <!-- SEO base -->
   <meta name="description" id="metaDesc" content="E-60 ยาแยกไฟฟ้าแบบด่างชนิดผง ปราศจากสารลดแรงตึงผิว มีซิลิเกต ฟอสเฟต และสารกำจัดสนิม ใช้ล้างคราบน้ำมันฝังแน่นด้วยไฟฟ้า แนะนำใช้คู่ Soak clean B1 ช่วยล้างออกง่าย ขจัดสนิมบาง ๆ ได้ พร้อมช่วงการใช้ อุณหภูมิ เวลา กระแส และคำแนะนำการบำรุงรักษา/วิเคราะห์">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/electrocleaning/e60/index.html">
+  <link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/electrodegreaser.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -22,7 +22,7 @@
   <meta property="og:locale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="E-60 — Electro Degreaser (Alkaline, Surfactant-Free)">
   <meta property="og:description" id="ogDesc" content="ผงด่างปราศจากสารลดแรงตึงผิว มีซิลิเกต ฟอสเฟต และสารกำจัดสนิม ใช้ล้างคราบน้ำมันด้วยไฟฟ้า แนะนำใช้คู่ Soak clean B1 พร้อมวิธีใช้และเงื่อนไขการเดินงาน">
-  <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/electrocleaning/e60/index.html">
+  <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/electrodegreaser.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail26218b1741271133.jpg">
   <meta property="og:image:alt" content="Electro-cleaning alkaline bath removing oils from metal parts">
   <meta name="twitter:card" content="summary_large_image">
@@ -237,12 +237,12 @@
     },
     {
       "@type":"Product",
-      "@id":"https://www.baumechemical.com/products/pretreatment/electrocleaning/e60/#product",
+      "@id":"https://www.baumechemical.com/products/pretreatment/electrodegreaser.html#product",
       "name":"E-60 — Electro Degreaser (Alkaline, Surfactant-Free)",
       "brand":{"@id":"https://www.baumechemical.com/#organization"},
       "category":"Electroplating pretreatment chemicals",
       "description":"Alkaline electro-degreaser powder free of surfactants with silicates, phosphates, and deruster; removes stubborn oils with DC power. Recommended with Soak clean B1. Includes usage ranges, maintenance, and analysis method.",
-      "url":"https://www.baumechemical.com/products/pretreatment/electrocleaning/e60/",
+      "url":"https://www.baumechemical.com/products/pretreatment/electrodegreaser.html",
       "image":"https://img5.pic.in.th/file/secure-sv1/thumbnail26218b1741271133.jpg"
     },
     {
@@ -295,7 +295,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/products/pretreatment/electrocleaning/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/pretreatment/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">E-60 — Electro Degreaser (Alkaline, Surfactant-Free)</h1>
       <p data-i18n-key="hero_tagline">ผงด่างปราศจากสารลดแรงตึงผิว มีซิลิเกต ฟอสเฟต และสารกำจัดสนิม ใช้ไฟฟ้าช่วยล้างคราบน้ำมันฝังแน่น แนะนำใช้คู่ Soak clean B1</p>
@@ -312,7 +312,6 @@
           <a class="toc-chip" href="#intro" data-i18n-key="toc_intro">ภาพรวม</a>
           <a class="toc-chip" href="#usage" data-i18n-key="toc_usage">วิธีใช้ & พารามิเตอร์</a>
           <a class="toc-chip" href="#maint" data-i18n-key="toc_maint">การบำรุงรักษา</a>
-          <a class="toc-chip" href="#analysis" data-i18n-key="toc_analysis">การวิเคราะห์น้ำยา</a>
           <a class="toc-chip" href="#ec" data-i18n-key="toc_ec">บ่อล้างไขมันไฟฟ้า (EC)</a>
           <a class="toc-chip" href="#trouble" data-i18n-key="toc_trouble">ปัญหาที่พบบ่อย & วิธีแก้</a>
         </p>
@@ -391,87 +390,94 @@
         </div>
       </section>
 
-      <!-- Troubleshooting -->
-      <section id="trouble" class="reveal section-block" aria-labelledby="trb-h">
-        <h2 id="trb-h" class="section" data-i18n-key="trb_h">ปัญหาที่พบบ่อยและวิธีแก้ในระบบ EC</h2>
-        <div class="table">
-          <table>
-            <thead>
-              <tr>
-                <th data-i18n-key="trb_issue">ปัญหา</th>
-                <th data-i18n-key="trb_cause">สาเหตุที่เป็นไปได้</th>
-                <th data-i18n-key="trb_fix">วิธีแก้ไข/ป้องกัน</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td data-i18n-key="trb_block">การอุดตันของท่อหรือบ่อ</td>
-                <td>
-                  <ul>
-                    <li>การสะสมของไขมันและเศษอาหาร</li>
-                    <li>มีเศษขยะชิ้นใหญ่หลุดเข้าไป</li>
-                  </ul>
-                </td>
-                <td>
-                  <ul>
-                    <li>ตักไขมันบนผิวอย่างสม่ำเสมอ อย่างน้อยสัปดาห์ละครั้ง</li>
-                    <li>ติดตั้งและทำความสะอาดตะแกรงดักเศษก่อนเข้าบ่อ</li>
-                  </ul>
-                </td>
-              </tr>
-              <tr>
-                <td data-i18n-key="trb_odor">กลิ่นเหม็นเน่า/แก๊สไข่เน่า</td>
-                <td>
-                  <ul>
-                    <li>ตะกอน/อินทรีย์ค้างนานเกิดการหมัก</li>
-                    <li>การระบายอากาศไม่พอ (ระบบปิด)</li>
-                    <li>กระบวนการ Coagulation ไม่สมบูรณ์</li>
-                  </ul>
-                </td>
-                <td>
-                  <ul>
-                    <li>ทำความสะอาดและกำจัดตะกอนเป็นประจำ</li>
-                    <li>ตรวจสอบท่อ/ช่องระบายอากาศ</li>
-                    <li>ตรวจสอบกระแสไฟและค่า pH ให้อยู่ในช่วงเหมาะสม</li>
-                  </ul>
-                </td>
-              </tr>
-              <tr>
-                <td data-i18n-key="trb_effdrop">ประสิทธิภาพลดลง</td>
-                <td>
-                  <ul>
-                    <li>ขั้วไฟฟ้าสึกหรือเกิดฟิล์ม (passivation)</li>
-                    <li>พารามิเตอร์ไม่เหมาะสม: กระแส ระยะขั้ว pH เวลา</li>
-                    <li>ภาระสารแขวนลอย/ไขมันเกินกำลังระบบ</li>
-                  </ul>
-                </td>
-                <td>
-                  <ul>
-                    <li>ทำความสะอาดหรือเปลี่ยนขั้วตามอายุการใช้งาน</li>
-                    <li>ปรับตั้งค่าระบบให้เหมาะกับโหลดจริง</li>
-                    <li>เพิ่มขนาดระบบหรือปรับปรุงขั้นตอนดักไขมันต้นทาง</li>
-                  </ul>
-                </td>
-              </tr>
-              <tr>
-                <td data-i18n-key="trb_cost">ค่าใช้จ่ายสูง</td>
-                <td>
-                  <ul>
-                    <li>ใช้กระแสไฟสูงเกินจำเป็น</li>
-                    <li>ต้นทุนเปลี่ยนขั้วและกำจัดตะกอน</li>
-                  </ul>
-                </td>
-                <td>
-                  <ul>
-                    <li>ปรับการทำงานให้อยู่ที่จุดมีประสิทธิภาพสูงสุด</li>
-                    <li>เลือกวัสดุขั้วที่เหมาะ และวางแผนจัดการตะกอนอย่างเหมาะสม</li>
-                  </ul>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
+<!-- Troubleshooting -->
+<section id="trouble" class="reveal section-block" aria-labelledby="trb-h">
+  <h2 id="trb-h" class="section" data-i18n-key="trb_h">ปัญหาที่พบบ่อยและวิธีแก้ในระบบ EC</h2>
+  <div class="table">
+    <table>
+      <thead>
+        <tr>
+          <th data-i18n-key="trb_issue">ปัญหา</th>
+          <th data-i18n-key="trb_cause">สาเหตุที่เป็นไปได้</th>
+          <th data-i18n-key="trb_fix">วิธีแก้ไข/ป้องกัน</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Row: Blockage -->
+        <tr>
+          <td data-i18n-key="trb_block">การอุดตันของท่อหรือบ่อ</td>
+          <td>
+            <ul>
+              <li data-i18n-key="trb_block_cause_1">การสะสมของไขมันและเศษอาหาร</li>
+              <li data-i18n-key="trb_block_cause_2">มีเศษขยะชิ้นใหญ่หลุดเข้าไป</li>
+            </ul>
+          </td>
+          <td>
+            <ul>
+              <li data-i18n-key="trb_block_fix_1">ตักไขมันบนผิวอย่างสม่ำเสมอ อย่างน้อยสัปดาห์ละครั้ง</li>
+              <li data-i18n-key="trb_block_fix_2">ติดตั้งและทำความสะอาดตะแกรงดักเศษก่อนเข้าบ่อ</li>
+            </ul>
+          </td>
+        </tr>
+
+        <!-- Row: Odor -->
+        <tr>
+          <td data-i18n-key="trb_odor">กลิ่นเหม็นเน่า/แก๊สไข่เน่า</td>
+          <td>
+            <ul>
+              <li data-i18n-key="trb_odor_cause_1">ตะกอน/อินทรีย์ค้างนานเกิดการหมัก</li>
+              <li data-i18n-key="trb_odor_cause_2">การระบายอากาศไม่พอ (ระบบปิด)</li>
+              <li data-i18n-key="trb_odor_cause_3">กระบวนการ Coagulation ไม่สมบูรณ์</li>
+            </ul>
+          </td>
+          <td>
+            <ul>
+              <li data-i18n-key="trb_odor_fix_1">ทำความสะอาดและกำจัดตะกอนเป็นประจำ</li>
+              <li data-i18n-key="trb_odor_fix_2">ตรวจสอบท่อ/ช่องระบายอากาศ</li>
+              <li data-i18n-key="trb_odor_fix_3">ตรวจสอบกระแสไฟและค่า pH ให้อยู่ในช่วงเหมาะสม</li>
+            </ul>
+          </td>
+        </tr>
+
+        <!-- Row: Efficiency drop -->
+        <tr>
+          <td data-i18n-key="trb_effdrop">ประสิทธิภาพในการบำบัดลดลง</td>
+          <td>
+            <ul>
+              <li data-i18n-key="trb_effdrop_cause_1">ขั้วไฟฟ้าสึกหรอหรือเกิดฟิล์ม (Passivation)</li>
+              <li data-i18n-key="trb_effdrop_cause_2">พารามิเตอร์ไม่เหมาะสม: กระแส ระยะขั้ว pH เวลา</li>
+              <li data-i18n-key="trb_effdrop_cause_3">ปริมาณสารแขวนลอย/ไขมันเกินขีดความสามารถของระบบ</li>
+            </ul>
+          </td>
+          <td>
+            <ul>
+              <li data-i18n-key="trb_effdrop_fix_1">ทำความสะอาดหรือเปลี่ยนขั้วไฟฟ้าตามอายุการใช้งาน</li>
+              <li data-i18n-key="trb_effdrop_fix_2">ปรับค่าระบบให้เหมาะกับโหลดจริง</li>
+              <li data-i18n-key="trb_effdrop_fix_3">เพิ่มขนาดระบบหรือปรับปรุงขั้นตอนดักไขมันต้นทาง</li>
+            </ul>
+          </td>
+        </tr>
+
+        <!-- Row: Cost -->
+        <tr>
+          <td data-i18n-key="trb_cost">ค่าใช้จ่ายในการดำเนินงานสูง</td>
+          <td>
+            <ul>
+              <li data-i18n-key="trb_cost_cause_1">ค่าไฟฟ้าสูงจากการใช้กระแสไฟมาก</li>
+              <li data-i18n-key="trb_cost_cause_2">ค่าเปลี่ยนขั้วไฟฟ้าและกำจัดตะกอน</li>
+            </ul>
+          </td>
+          <td>
+            <ul>
+              <li data-i18n-key="trb_cost_fix_1">เพิ่มประสิทธิภาพการทำงานให้อยู่ที่จุดเหมาะสม</li>
+              <li data-i18n-key="trb_cost_fix_2">เลือกวัสดุขั้วที่เหมาะ และวางแผนจัดการตะกอนอย่างเหมาะสม</li>
+            </ul>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
 
     </article>
   </main>
@@ -577,6 +583,34 @@
         trb_cause:"สาเหตุที่เป็นไปได้",
         trb_fix:"วิธีแก้ไข/ป้องกัน",
 
+          trb_block: "การอุดตันของท่อหรือบ่อ",
+  trb_block_cause_1: "การสะสมของไขมันและเศษอาหาร",
+  trb_block_cause_2: "มีเศษขยะชิ้นใหญ่หลุดเข้าไป",
+  trb_block_fix_1: "ตักไขมันบนผิวอย่างสม่ำเสมอ อย่างน้อยสัปดาห์ละครั้ง",
+  trb_block_fix_2: "ติดตั้งและทำความสะอาดตะแกรงดักเศษก่อนเข้าบ่อ",
+
+  trb_odor: "กลิ่นเหม็นเน่า/แก๊สไข่เน่า",
+  trb_odor_cause_1: "ตะกอน/อินทรีย์ค้างนานเกิดการหมัก",
+  trb_odor_cause_2: "การระบายอากาศไม่พอ (ระบบปิด)",
+  trb_odor_cause_3: "กระบวนการ Coagulation ไม่สมบูรณ์",
+  trb_odor_fix_1: "ทำความสะอาดและกำจัดตะกอนเป็นประจำ",
+  trb_odor_fix_2: "ตรวจสอบท่อ/ช่องระบายอากาศ",
+  trb_odor_fix_3: "ตรวจสอบกระแสไฟและค่า pH ให้อยู่ในช่วงเหมาะสม",
+
+  trb_effdrop: "ประสิทธิภาพในการบำบัดลดลง",
+  trb_effdrop_cause_1: "ขั้วไฟฟ้าสึกหรอหรือเกิดฟิล์ม (Passivation)",
+  trb_effdrop_cause_2: "พารามิเตอร์ไม่เหมาะสม: กระแส ระยะขั้ว pH เวลา",
+  trb_effdrop_cause_3: "ปริมาณสารแขวนลอย/ไขมันเกินขีดความสามารถของระบบ",
+  trb_effdrop_fix_1: "ทำความสะอาดหรือเปลี่ยนขั้วไฟฟ้าตามอายุการใช้งาน",
+  trb_effdrop_fix_2: "ปรับค่าระบบให้เหมาะกับโหลดจริง",
+  trb_effdrop_fix_3: "เพิ่มขนาดระบบหรือปรับปรุงขั้นตอนดักไขมันต้นทาง",
+
+  trb_cost: "ค่าใช้จ่ายในการดำเนินงานสูง",
+  trb_cost_cause_1: "ค่าไฟฟ้าสูงจากการใช้กระแสไฟมาก",
+  trb_cost_cause_2: "ค่าเปลี่ยนขั้วไฟฟ้าและกำจัดตะกอน",
+  trb_cost_fix_1: "เพิ่มประสิทธิภาพการทำงานให้อยู่ที่จุดเหมาะสม",
+  trb_cost_fix_2: "เลือกวัสดุขั้วที่เหมาะ และวางแผนจัดการตะกอนอย่างเหมาะสม",
+
         footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
 
@@ -625,6 +659,34 @@
         trb_issue:"Issue",
         trb_cause:"Likely causes",
         trb_fix:"Fix / prevention",
+
+          trb_block: "Blockages (pipes or tank)",
+  trb_block_cause_1: "Accumulation of fats and food solids",
+  trb_block_cause_2: "Large debris entering the system",
+  trb_block_fix_1: "Skim surface fats regularly (at least weekly)",
+  trb_block_fix_2: "Install and clean a coarse screen before the trap",
+
+  trb_odor: "Odor / hydrogen sulfide (H₂S)",
+  trb_odor_cause_1: "Anaerobic decomposition of retained sludge/organics",
+  trb_odor_cause_2: "Insufficient ventilation (closed system)",
+  trb_odor_cause_3: "Incomplete coagulation / electrical performance",
+  trb_odor_fix_1: "Routinely clean and remove sludge",
+  trb_odor_fix_2: "Verify vent piping is unobstructed",
+  trb_odor_fix_3: "Check current and keep pH in the effective range",
+
+  trb_effdrop: "Reduced treatment efficiency",
+  trb_effdrop_cause_1: "Electrode wear or passivation film",
+  trb_effdrop_cause_2: "Improper parameters: current, electrode gap, pH, time",
+  trb_effdrop_cause_3: "Suspended solids/fats exceed system capacity",
+  trb_effdrop_fix_1: "Clean/replace electrodes per service life",
+  trb_effdrop_fix_2: "Tune setpoints to the actual load",
+  trb_effdrop_fix_3: "Upsize system or improve upstream grease capture",
+
+  trb_cost: "High operating cost",
+  trb_cost_cause_1: "Excess current consumption",
+  trb_cost_cause_2: "Electrode replacement and sludge disposal costs",
+  trb_cost_fix_1: "Operate at the optimum efficiency point",
+  trb_cost_fix_2: "Select suitable electrode materials and plan proper sludge handling",
 
         footer_products:"Products", footer_contact:"Contact Us", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       }
