--- a/products/pretreatment/index.html
+++ b/products/pretreatment/index.html
@@ -6,7 +6,7 @@
 
   <!-- ==== SEO Core (Category: Pretreatment; single-URL i18n) ==== -->
   <title id="metaTitle">กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical</title>
-  <meta name="description" id="metaDesc" content="น้ำยาทำความสะอาดก่อนชุบ: กรดล้างไขมัน ด่างล้างไขมัน และอัลตร้าโซนิค เลือกสูตรให้เหมาะกับวัสดุ/คราบ เพื่อให้ผิวพร้อมชุบ คุณภาพคงที่ ลดของเสีย พร้อมทีมเทคนิคดูแลงานหน้างานจริง.">
+  <meta name="description" id="metaDesc" content="น้ำยาทำความสะอาดก่อนชุบ: กรดล้างไขมัน ด่างล้างไขมัน ไฟฟ้า และอัลตร้าโซนิค เลือกสูตรให้เหมาะกับวัสดุ/คราบ เพื่อให้ผิวพร้อมชุบ คุณภาพคงที่ ลดของเสีย พร้อมทีมเทคนิคดูแลงานหน้างานจริง.">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/">
   <meta name="theme-color" content="#2c5e4e">
@@ -24,13 +24,13 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/">
   <meta property="og:locale" id="ogLocale" content="th_TH">
-  <meta property="og:title" id="ogTitle" content="กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical">
-  <meta property="og:description" id="ogDesc" content="กรด/ด่างล้างไขมัน และอัลตร้าโซนิคสำหรับ Pretreatment ก่อนชุบ ทีมเทคนิคช่วยเลือกสูตรให้เหมาะกับไลน์ของคุณ.">
+  <meta property="og:title" id="ogTitle" content="กรด/ด่างล้างไขมัน ไฟฟ้า • อัลตร้าโซนิค | Baume Chemical">
+  <meta property="og:description" id="ogDesc" content="กรด/ด่างล้างไขมัน ไฟฟ้า และอัลตร้าโซนิคสำหรับ Pretreatment ก่อนชุบ ทีมเทคนิคช่วยเลือกสูตรให้เหมาะกับไลน์ของคุณ.">
   <meta property="og:image" content="https://i.imgur.com/QfsLZ0I.jpeg">
   <meta property="og:image:secure_url" content="https://i.imgur.com/QfsLZ0I.jpeg">
   <meta property="og:image:alt" content="Pretreatment cleaning: acid, alkaline and ultrasonic">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" id="twTitle" content="กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical">
+  <meta name="twitter:title" id="twTitle" content="กรด/ด่างล้างไขมัน ไฟฟ้า • อัลตร้าโซนิค | Baume Chemical">
   <meta name="twitter:description" id="twDesc" content="กรด/ด่างล้างไขมัน และอัลตร้าโซนิคสำหรับ Pretreatment ก่อนชุบ ทีมเทคนิคช่วยเลือกสูตรให้เหมาะกับไลน์ของคุณ.">
   <meta name="twitter:image" content="https://i.imgur.com/QfsLZ0I.jpeg">
 
@@ -74,12 +74,14 @@
       "itemListElement": [
         {"@type": "ListItem","position": 1,"name": "Acid Cleaner Pretreatment","url": "https://www.baumechemical.com/products/pretreatment/acidclean.html"},
         {"@type": "ListItem","position": 2,"name": "Alkaline Cleaner Pretreatment","url": "https://www.baumechemical.com/products/pretreatment/soakclean.html"},
-        {"@type": "ListItem","position": 3,"name": "Ultrasonic Cleaner Pretreatment","url": "https://www.baumechemical.com/products/pretreatment/ultrasonic.html"}
+        {"@type": "ListItem","position": 3,"name": "Electro Degreaser Pretreatment","url": "https://www.baumechemical.com/products/pretreatment/electrodegreaser.html"}
+        {"@type": "ListItem","position": 4,"name": "Ultrasonic Cleaner Pretreatment","url": "https://www.baumechemical.com/products/pretreatment/ultrasonic.html"}
       ]
     },
     "hasPart":[
       {"@type":"WebPage","name":"Acid Cleaner Pretreatment","url":"https://www.baumechemical.com/products/pretreatment/acidclean.html"},
       {"@type":"WebPage","name":"Alkaline Cleaner Pretreatment","url":"https://www.baumechemical.com/products/pretreatment/soakclean.html"},
+      {"@type":"WebPage","name":"Electro Degreaser Pretreatment","url":"https://www.baumechemical.com/products/pretreatment/electrodegreaser.html"}
       {"@type":"WebPage","name":"Ultrasonic Cleaner Pretreatment","url":"https://www.baumechemical.com/products/pretreatment/ultrasonic.html"}
     ]
   }
